# zx-spectrum-pico-interface-one

./: .gitignore  .gitmodules  README.md  errata.txt  notebook.txt
3d_print/: README.txt
3d_print/Modified Case/: README.txt  ZX Pico Interface Top.stl  Zx Pico Interface Case Bottom.stl
3d_print/case/: frame.scad  frame.stl  lower_case.3mf  lower_case.scad  lower_case.stl  spectrum_riser.scad  spectrum_riser.stl  upper_case.3mf  upper_case.scad  upper_case.stl
3d_print/pcb_sandwich_spacer/: README.txt  pcb_spacer.3mf  pcb_spacer.scad  pcb_spacer.stl
3d_print/rotary_spacer/: README.txt  rotary_spacer.3mf  rotary_spacer.scad  rotary_spacer.stl
3d_print/top_panel/: mII.ai  microdrive_icon.ai  title.ai  top_panel.kicad_pcb  top_panel.kicad_prl  top_panel.kicad_pro
3d_print/top_panel_spacer/: README.txt  spacer.3mf  spacer.scad  spacer.stl
binaries/: README.md  zx_pico_if1_fw.uf2  zx_pico_if1_io_fw.uf2  zx_pico_if1_ui_fw.uf2
docs/: Assembly Listing of the ZX Interface 1 Operating System.html  if1_2.txt
firmware/: CMakeLists.txt  roms.h  zx_pico_if1_fw.c
firmware-common/: cartridge.h  link_common.c  link_common.h  microdrive.h  picoputer.pio  uart.h  ui_io_comms.h
firmware-io/: .gitignore  CMakeLists.txt  compat.h  create_dir_table.pl  if1.c  if1.h  if1_orig.c  internals.h  libspectrum.h  microdrive.c  microdrive.h  mreq_dir.pio  spi.h  tape.c  tape.h  test_image.h  uart.h  utils.h  zx_pico_if1_io_fw.c
firmware-io/resources/: a1_180.mdr  a1_254.mdr  b2_180.mdr  b2_254.mdr  c3_180.mdr  c3_254.mdr  d4_180.mdr  d4_254.mdr  e5_180.mdr  e5_254.mdr  f6_180.mdr  f6_254.mdr  g7_180.mdr  g7_254.mdr  h8_180.mdr  h8_254.mdr  mm.mdr  test_image.mdr  test_image_32blk.mdr
firmware-rom/: CMakeLists.txt  zx_pico_if1_fw.c
firmware-ui/: .gitignore  CMakeLists.txt  fsm.c  fsm.h  hw_config.c  libspectrum.h  live_microdrive_data.h  oled_display.c  oled_display.h  sd_card.c  sd_card.h  spi.h  ssd1306.c  ssd1306.h  uart.h  work_queue.c  work_queue.h  zx_pico_if1_ui_fw.c
firmware-ui/gui/: gui.c  gui.fsm.def  gui.h  gui_fsm.c  gui_fsm.def  gui_fsm.h
sample_sd_card/: Empty.mdr  Games.mdr  zxes_config.txt
srom/: Memory_RAM.kicad_sym  datapack-tool1-rescue.lib  fp-lib-table  io_pico.kicad_sch  rear_edge.kicad_sch  srom 1.5.kicad_pcb  srom 1.5.kicad_prl  srom.kicad_pcb  srom.kicad_prl  srom.kicad_pro  srom.kicad_sch  sym-lib-table  ui.kicad_sch
srom/ZX Pico interface 1.5/: README.txt  ZX Pico interface 1.5.rar  srom-B_Cu.gbl  srom-B_Mask.gbs  srom-B_Paste.gbp  srom-B_Silkscreen.gbo  srom-Edge_Cuts.gm1  srom-F_Cu.gtl  srom-F_Mask.gts  srom-F_Paste.gtp  srom-F_Silkscreen.gto  srom-In1_Cu.g2  srom-In2_Cu.g3  srom-NPTH-drl_map.ps  srom-NPTH.drl  srom-PTH-drl_map.ps  srom-PTH.drl
srom/ajm_kicad.pretty/: Conn_uSDcard.kicad_mod  PinHeader_2x08_P2.54mm_Horizontal_psionSide.kicad_mod
srom/fab1.0/: srom-B_Cu.gbl  srom-B_Mask.gbs  srom-B_Paste.gbp  srom-B_Silkscreen.gbo  srom-Edge_Cuts.gm1  srom-F_Cu.gtl  srom-F_Mask.gts  srom-F_Paste.gtp  srom-F_Silkscreen.gto  srom-NPTH-drl_map.gbr  srom-NPTH.drl  srom-PTH-drl_map.gbr  srom-PTH.drl
srom/fab1.3/: srom-B_Cu.gbl  srom-B_Mask.gbs  srom-B_Paste.gbp  srom-B_Silkscreen.gbo  srom-Edge_Cuts.gm1  srom-F_Cu.gtl  srom-F_Mask.gts  srom-F_Paste.gtp  srom-F_Silkscreen.gto  srom-NPTH-drl_map.gbr  srom-NPTH.drl  srom-PTH-drl_map.gbr  srom-PTH.drl
srom/fab1.4/: srom-B_Cu.gbl  srom-B_Mask.gbs  srom-B_Paste.gbp  srom-B_Silkscreen.gbo  srom-Edge_Cuts.gm1  srom-F_Cu.gtl  srom-F_Mask.gts  srom-F_Paste.gtp  srom-F_Silkscreen.gto  srom-In1_Cu.g2  srom-In2_Cu.g3  srom-NPTH-drl_map.gbr  srom-NPTH.drl  srom-PTH-drl_map.gbr  srom-PTH.drl
tools/: process_fsm.pl
ui_daughterboard/: ui_daughterboard 1.5.kicad_pcb  ui_daughterboard 1.5.kicad_prl  ui_daughterboard.kicad_pcb  ui_daughterboard.kicad_prl  ui_daughterboard.kicad_pro  ui_daughterboard.kicad_sch
(+23 files in other folders)
